# bouncarr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  config.example.yaml
src/: config.rs  error.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/jellyfin/: auth.rs  client.rs  mod.rs  types.rs
src/proxy/: handler.rs  mod.rs  websocket.rs
src/routes/: auth.rs  mod.rs  ui.rs
