[package]
name = "bouncarr"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cookie management
tower-cookies = "0.10"

# JWT support
jsonwebtoken = "9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP types
http = "1.0"
http-body-util = "0.1"

# WebSocket support
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Random number generation
rand = "0.8"
base64 = "0.22"

# URL encoding
urlencoding = "2.1"
url = "2.5.7"
